// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.updateJumps should add a new logic jump with temporaryId. 1`] = `
Object {
  "updateJumps": Object {
    "questions": Array [
      Object {
        "alwaysJumpDestinationQuestion": Object {
          "title": "Q2",
        },
        "jumps": Array [
          Object {
            "conditions": Array [
              Object {
                "operator": "IS_NOT",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R1",
                },
              },
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R3",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
          Object {
            "conditions": Array [
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R4",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
        ],
        "title": "Q1",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q2",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q3",
      },
    ],
  },
}
`;

exports[`mutations.updateJumps should add a new logic jump. 1`] = `
Object {
  "updateJumps": Object {
    "questions": Array [
      Object {
        "alwaysJumpDestinationQuestion": Object {
          "title": "Q2",
        },
        "jumps": Array [
          Object {
            "conditions": Array [
              Object {
                "operator": "IS_NOT",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R1",
                },
              },
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R3",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
          Object {
            "conditions": Array [
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R4",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
        ],
        "title": "Q1",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q2",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q3",
      },
    ],
  },
}
`;

exports[`mutations.updateJumps should add a redirection. 1`] = `
Object {
  "updateJumps": Object {
    "questions": Array [
      Object {
        "alwaysJumpDestinationQuestion": Object {
          "title": "Q2",
        },
        "jumps": Array [],
        "title": "Q1",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q2",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q3",
      },
    ],
  },
}
`;

exports[`mutations.updateJumps should remove a condition. 1`] = `
Object {
  "updateJumps": Object {
    "questions": Array [
      Object {
        "alwaysJumpDestinationQuestion": Object {
          "title": "Q2",
        },
        "jumps": Array [
          Object {
            "conditions": Array [
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R3",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
        ],
        "title": "Q1",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q2",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q3",
      },
    ],
  },
}
`;

exports[`mutations.updateJumps should remove a logic jump. 1`] = `
Object {
  "updateJumps": Object {
    "questions": Array [
      Object {
        "alwaysJumpDestinationQuestion": Object {
          "title": "Q2",
        },
        "jumps": Array [
          Object {
            "conditions": Array [
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R4",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
        ],
        "title": "Q1",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q2",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q3",
      },
    ],
  },
}
`;

exports[`mutations.updateJumps should update existing logic jump and add a new condition. 1`] = `
Object {
  "updateJumps": Object {
    "questions": Array [
      Object {
        "alwaysJumpDestinationQuestion": Object {
          "title": "Q2",
        },
        "jumps": Array [
          Object {
            "conditions": Array [
              Object {
                "operator": "IS_NOT",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R1",
                },
              },
              Object {
                "operator": "IS",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R3",
                },
              },
              Object {
                "operator": "IS_NOT",
                "question": Object {
                  "title": "Q1",
                },
                "value": Object {
                  "title": "R2",
                },
              },
            ],
            "destination": Object {
              "title": "Q3",
            },
            "origin": Object {
              "title": "Q1",
            },
          },
        ],
        "title": "Q1",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q2",
      },
      Object {
        "alwaysJumpDestinationQuestion": null,
        "jumps": Array [],
        "title": "Q3",
      },
    ],
  },
}
`;
